# hyprshot-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
doc/: CLI.md  CONFIGURATION.md  HOTKEYS.md
resources/windows/: hyprshot.manifest  hyprshot.rc
scripts/: wayland_tests.sh
src/: app.rs  capture.rs  cli.rs  config.rs  config_cmds.rs  embedded_slurp.rs  freeze.rs  geometry.rs  hyprland_cmds.rs  main.rs  save.rs  selector.rs  tests.rs  utils.rs  windows_app.rs  windows_capture.rs  windows_i18n.rs  windows_icon.rs  windows_ui.rs
