[package]
name = "hyprshot-rs"
version = "0.1.6"
edition = "2024"
authors = ["vremyavnikuda <hopperplayer0@gmail.com>"]
description = "A utility to easily take screenshots in Hyprland using your mouse"
license = "GPL-3.0"
repository = "https://github.com/shikoucore/hyprshot-rs"
homepage = "https://github.com/shikoucore/hyprshot-rs"
keywords = ["hyprland", "screenshot", "wayland", "cli"]
categories = ["command-line-utilities", "graphics"]
readme = "README.md"
build = "build.rs"
include = [
  "src/**",
  "build.rs",
  "resources/windows/**",
  "vendor/slurp/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE*",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
directories = "5.0"
chrono = "0.4"
dialoguer = "0.11"

[target.'cfg(not(windows))'.dependencies]
notify-rust = "4.11"
grim-rs = { version = "0.1.5", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = { version = "3.10", optional = true }

[target.'cfg(not(windows))'.dependencies.wayland-client]
version = "0.31"
optional = true

[target.'cfg(not(windows))'.dependencies.wayland-protocols]
version = "0.32"
optional = true
features = ["unstable"]

[target.'cfg(not(windows))'.dependencies.wayland-protocols-wlr]
version = "0.3"
optional = true
features = ["client"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
  "Foundation",
  "Graphics",
  "Graphics_Capture",
  "Graphics_DirectX",
  "Graphics_DirectX_Direct3D11",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Ole",
  "Win32_System_WinRT",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  "Win32_UI_HiDpi",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3.4"
eframe = "0.28"

[features]
default = ["grim", "freeze"]
grim = ["grim-rs"]
freeze = [
  "grim-rs",
  "wayland-client",
  "wayland-protocols",
  "wayland-protocols-wlr",
  "memmap2",
  "tempfile",
]
windows-e2e = []

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"
