[package]
name = "hyprshot-rs"
version = "0.1.8"
edition = "2024"
authors = ["vremyavnikuda <hopperplayer0@gmail.com>"]
description = "A utility to easily take screenshots in Wayland using your mouse"
license = "GPL-3.0"
repository = "https://github.com/shikoucore/hyprshot-rs"
homepage = "https://github.com/shikoucore/hyprshot-rs"
keywords = ["hyprland", "screenshot", "wayland", "cli"]
categories = ["command-line-utilities", "graphics"]
readme = "README.md"
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE*",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
notify-rust = "4.11"
anyhow = "1.0"
dirs = "5.0"
directories = "5.0"
chrono = "0.4"
dialoguer = "0.11"
grim-rs = { version = "0.1.6", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = { version = "3.10", optional = true }
slurp-rs = "0.2.0"

[dependencies.wayland-client]
version = "0.31"
optional = true

[dependencies.wayland-protocols]
version = "0.32"
optional = true
features = ["unstable"]

[dependencies.wayland-protocols-wlr]
version = "0.3"
optional = true
features = ["client"]

[features]
default = ["grim", "freeze"]
grim = ["grim-rs"]
freeze = [
  "grim-rs",
  "wayland-client",
  "wayland-protocols",
  "wayland-protocols-wlr",
  "memmap2",
  "tempfile",
]
